<resources>

    <string name="app_name">IdealMirror</string>

    <string name="main_login_text">登陆</string>
    <string name="main_menu_title_text">浏览所有类别</string>
    <string name="tuij">显示排序为 最新推荐</string>
    <string name="create_title">创建账号</string>
    <string name="create_phone_text">手机号</string>
    <string name="create_verifi_text">验证码</string>
    <string name="create_verifi_btn_text">发送验证码</string>
    <string name="create_set_pw_text">设置密码</string>
    <string name="create_btn_text">创建账号</string>


    <string name="login_title_text">帐号登录</string>
    <string name="phone_number">手机号</string>
    <string name="login_password">密码</string>
    <string name="forgetPwd">忘记密码？</string>
    <string name="login_btn_text">登录</string>
    <string name="create_accounts">创建帐号</string>
    <string name="social_contact_pwd">使用社交帐号</string>
    
    <string name="addAddress">添加地址</string>
    <string name="addReceiverName">添加收件人姓名</string>
    <string name="addContactPhone">添加联络人电话号码</string>
    <string name="addReceiverGoodsAddress">添加收货地址</string>
    <string name="commit_address">提交地址</string>
    <string name="forget_password_title_text">忘记密码</string>
    <string name="alter_password">修改密码</string>

    <string name="delete">删除</string>
    <string name="address">地址：</string>
    <string name="all_address_receiver">收件人：</string>
    <string name="my_address">我的所有地址</string>
    <string name="add_address">添加地址</string>
    <string name="text">$450</string>
    <string name="caomeiyanj">草莓红色圆框眼镜</string>
    <string name="faguo">法国巴黎</string>
    <string name="textsee">SEE CONCEPT</string>
    <string name="liulanping">浏览平光眼镜</string>
    <string name="menu_back">返回首页</string>
    <string name="close">退出</string>
    <string name="shopping_menu_title_text">我的購物車</string>
    <string name="main_shopping">購物車</string>
    <string name="java_create_sure_message">请确认填写信息</string>
    <string name="java_create_success">创建成功</string>
    <string name="java_create_fail">创建失败</string>
    <string name="java_login_success">登陆成功</string>
    <string name="java_login_fail">登录失败</string>

    <string name="adornPhotos">佩戴图集</string>
    <string name="watch_details">滑动浏览详情</string>
    <string name="goods_show">商品细节展示</string>

    <string name="buy_detail_title_tv">订单详情</string>
    <string name="xinxi">请填写收件人信息:</string>
    <string name="buy_detail_add_address_tv">填写地址</string>
    <string name="buy_detail_sure_btn_text">确认下单</string>
    <string name="tianjiadizhi">添加地址</string>

    <string name="menu_story_text">専題分享</string>

    <string name="wenan">文案(订购商品)文案(订购商品)文案(订购商品)文案(订购商品)</string>
    <string name="moren">地址已添加为默认地址</string>
    <string name="name">添加收件人姓名</string>
    <string name="number">添加联系人电话号码</string>
    <string name="addresss">添加收货地址</string>
    <string name="addaddress">添加地址</string>
    <string name="asfd">提交地址</string>

    <string name="java_alladdress_receiver_name">添加收件人姓名</string>
    <string name="java_alladdress_contact_phone">添加联系人电话号码</string>
    <string name="java_alladdress_receiver_address">添加收货地址</string>
    <string name="java_alladdress_add_address">添加地址</string>
    <string name="java_alladdress_commit_address">提交地址</string>
    <string name="java_isnet_normal">网络正常</string>
    <string name="java_isnet_abnormal">网络非正常</string>
    <string name="AllAddress_name">编辑收件人姓名</string>
    <string name="AllAddress_address">编辑联系人电话号码</string>
    <string name="AllAddress_setaddress">编辑收货地址</string>
    <string name="AllAddress_xijiao">提交修改</string>
    <string name="rightmessage">请正确填写信息</string>
    <string name="java_addpeoplemessage">请填写收件人信息</string>
    <string name="java_addaddress">添加地址</string>
    <string name="receiver">"收件人: "</string>
    <string name="java_address">"地址: "</string>
    <string name="jave_changeaddress">更改地址</string>
    <string name="java_setpeoplemessage">请填写收件人信息</string>
    <string name="java_setaddress">添加地址</string>
    <string name="setmessage">编辑地址</string>
    <string name="java_story_check_net">请检查网络</string>
    <string name="java_vertical_three_story">専題分享</string>
    <string name="menu_shopping">我的購物車</string>
    <string name="buy_weichat_pay">选择微信支付</string>
    <string name="Buy_alibabapay">选择支付宝支付</string>
    <string name="Buy_choosepay">选择支付方式</string>
    <string name="buy_pay_success">支付成功</string>
    <string name="buy_pay_false">支付失败</string>
    <string name="buy_pay_oom">支付失败</string>
    <string name="GoodList_paysuccess">请求成功</string>
    <string name="Mrtj_requestseccess">请求成功</string>
    <string name="wchat_pay">微信支付</string>
    <string name="alibaba_pay">支付宝支付</string>
    <string name="pay_goodsname">商品名称:</string>
    <string name="pay_testgoods">测试的商品</string>
    <string name="pay_goodsdes">商品描述:</string>
    <string name="pay_testgoodstitle">该测试商品的详细描述</string>
    <string name="pay_goodsprice">商品价格:</string>
    <string name="pay_zerozero">0.01元</string>
    <string name="pay_paybtn">支付</string>
    <string name="pay_webtonatice">网页支付转native</string>
    <string name="Loadingyes">登陆成功</string>
    <string name="java_main_back">确定真的要离开我了吗~</string>


</resources>
