<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_marginten"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/pay_goodsname"
                android:textColor="#777777"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/pay_testgoods"
                android:textColor="#333333"
                tools:ignore="HardcodedText" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_margintens"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/pay_goodsdes"
                android:textColor="#777777"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/pay_testgoodstitle"
                android:textColor="#333333"
                tools:ignore="HardcodedText" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_tems"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/pay_goodsprice"
                android:textColor="#777777"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/pay_zerozero"
                android:textColor="#ff6600"
                tools:ignore="HardcodedText" />
        </com.zhy.autolayout.AutoLinearLayout>

        <Button
            android:id="@+id/pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_martens"
            android:onClick="pay"
            android:text="@string/pay_paybtn"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/h5pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="h5Pay"
            android:text="@string/pay_webtonatice"
            tools:ignore="HardcodedText" />
    </com.zhy.autolayout.AutoLinearLayout>

</ScrollView>