<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_menu_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_custom"
    android:paddingLeft="@dimen/menu_fragment_left">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/menu_fragment_left"
        android:orientation="vertical">

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_list_top"
            android:divider="@null" />

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_to_story_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_to_story_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_top"
                android:text="@string/menu_story_text"
                android:textColor="@drawable/selector_menu_item"
                android:textSize="@dimen/menu_item_size" />

            <ImageView
                android:id="@+id/menu_to_story_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_iv_top"
                android:src="@drawable/title_underline"
                android:visibility="invisible" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_to_shopping_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_to_shopping_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_top"
                android:text="@string/menu_shopping"
                android:textColor="@drawable/selector_menu_item"
                android:textSize="@dimen/menu_item_size" />

            <ImageView
                android:id="@+id/menu_to_shopping_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_iv_top"
                android:src="@drawable/title_underline"
                android:visibility="invisible" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_to_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_to_home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_top"
                android:text="@string/menu_back"
                android:textColor="@drawable/selector_menu_item"
                android:textSize="@dimen/menu_item_size" />

            <ImageView
                android:id="@+id/menu_to_home_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_iv_top"
                android:src="@drawable/title_underline"
                android:visibility="invisible" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_return_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_return_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_top"
                android:text="@string/close"
                android:textColor="@drawable/selector_menu_item"
                android:textSize="@dimen/menu_item_size" />

            <ImageView
                android:id="@+id/menu_return_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_iv_top"
                android:src="@drawable/title_underline"
                android:visibility="invisible" />
        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>


</com.zhy.autolayout.AutoLinearLayout>
